test/Inputs/header_5.llzk
// Imported via `include_fail.llzk`

module attributes {llzk.lang} {
  // expected-error@+1 {{'include.from' op expected 'builtin.module' from included file to have "llzk.lang" attribute}}
  include.from "Inputs/header_3.llzk" as @std

  function.def @test_func() {
    function.call @std::@pkg_two::@my_func_2() : () -> ()
    function.return
  }
}
